# TONQuest

./: .env  .gitignore  0001-added-nft.patch  Dockerfile  Makefile  README.md  dasa  docker-compose_dev.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
client/: index.html  lol.txt  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
client/src/: App.js  App.tsx  App.vue  Page.tsx  index.css  init.ts  main.js  main.tsx  mockEnv.ts  utils.tsx
client/src/api/: Router.js  Router.ts
client/src/components/: BottomMenu.js  BottomMenu.tsx  Carousel.js  Carousel.tsx  ConnectWalletBox.js  ConnectWalletBox.tsx  ConnectWalletHandler.tsx  Experience.js  Experience.tsx  Modal.js  Modal.tsx  Navbar.js  Navbar.tsx  TopContextMenu.js  TopContextMenu.tsx
client/src/components/buttons/: GradientButton.js  GradientButton.tsx  NextSlideButton.tsx
client/src/components/cards/: QuestCard.js  QuestCard.tsx  TaskCard.js  TaskCard.tsx
client/src/pages/: BannerPage.js  BannerPage.tsx  BonusPage.js  BonusPage.tsx  Congratulations.js  Congratulations.tsx  CongratulationsPage.tsx  ExpPage.js  ExpPage.tsx  GreetingPage.js  GreetingPage.tsx  NFTPage.js  NFTPage.tsx  QuestPage.js  QuestPage.tsx  SliderPage.js  SliderPage.tsx  TasksPage.js  TasksPage.tsx
client/src/providers/: TelegramContext.js  TelegramContext.tsx
client/src/store/: index.js  index.ts
client/src/store/slices/: branchSlice.js  branchSlice.ts  categorySlice.js  categorySlice.ts  nftSlice.js  nftSlice.ts  pieceSlice.js  (+7 more)
deploy/entrypoints/: run_python.sh
deploy/node_server/: gunicorn.conf.py
server/: .env.example  Dockerfile  Makefile  api_client.py  application.py  config.py  database.py  docker-compose_dev.yml  logging.dev.yml  main.py  models.py  pyproject.toml  r.py  runner.py  scanner_runner.py  server.py  tasks.py  tt.py
server/alembic/: env.py
server/alembic/versions/: 19dad58d92b2_added_model.py  386ee4ecedd0_initial_tables.py  4f15e6d5401e_fix_telegram_id_int32.py  63fb0db813b7_null_wallet_address_in_user_model.py  73b80a9f90fa_added_null_to_nft_branch.py  81c24f96764f_add_title_field_to_branch.py  84354e3b5661_added_queue_to_nft_piece.py  86bb5d7e4133_add_users_to_branch_modelh.py  958ec597e787_added_category_to_branch.py  b0b99f03efb9_create_all_tables.py  d000bc88addb_add_nullable_branch_for_task.py  eb8fd034467d_added_branch_list_to_category_model.py  ed2c42406e0b_add_users_to_task_modelh.py
server/apps/account/: account_codes.py  enums.py  repositories.py  router.py  schemas.py  service.py  types.py
server/apps/currency/: contracts.py
server/apps/currency/common/: asset.py  asset_error.py  asset_type.py  readiness_status.py
server/apps/scanner/: router.py  service.py
server/apps/ton_quest/: application.py  enums.py  manager.py  models.py  repository.py  router.py  schemas.py  tasks.py  tt.py  web_app_auth.py
server/apps/transaction/: enums.py  repositories.py  schemas.py  service.py
server/apps/wallet/: schemas.py
server/core/: config.py  dependencies.py  enums.py  exceptions.py  logger.py  middlewares.py  producer.py  router.py  schemas.py  ton_provider.py  types.py  utils.py
server/core/database/: base.py  engine.py  local_storage.py  metadata.py  repository.py
server/database/: engine.py  initial_data.py  metadata.py  repository.py  utils.py
server/deploy/entrypoints/: run_python.sh  run_scanner.sh
server/deploy/node_server/: gunicorn.conf  gunicorn.conf.py
server/static/elements/: token_swap.webm
server/tests/: conftest.py
server/tests/datasets/: transactions.py
server/tests/unittests/: test_account_service.py
tbot/: .env.example  .gitignore  Dockerfile  Makefile  bot.py  docker-compose_dev.yml  logging.yml  pyproject.toml
tbot/src/core/: config.py  database.py  handlers.py  local_storage.py  logger_settings.py  messages.py
tbot/src/referral/: handlers.py  service.py  state.py  utils.py
tbot/src/users/: database.py  exceptions.py  manager.py  schemas.py
tbot/src/utils/: commands.py  database.py
