[tool.poetry]
name = "tonquest"
version = "0.1.0"
description = ""
authors = ["Ihor Samartsev <isamarcev1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.43.0"
fastapi = "^0.115.5"
pydantic = "^2.9.2"
pymongo = "^4.9"
pytoniq = "^0.1.40"
uvicorn = "^0.32.0"
motor = "^3.6.0"
aiohttp = "^3.10"
pydantic-settings = "^2.6.1"
redis = "^5.2.0"
pyyaml = "^6.0.2"
gunicorn = "^23.0.0"
python-json-logger = "^2.0.7"
tonsdk = "^1.0.15"
toml = "^0.10.2"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
aiogram = "3.14.0"
waitress = "3.0.2"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
pytest = "^8.3.3"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
ruff = "^0.7.4"
pytest-asyncio = "^0.23.7"
pytest-postgresql = "^6.0.0"
pytest-cov = "^5.0.0"



[tool.ruff]
exclude = [
    "__pypackages__",
    "migrations/versions/"
]
line-length = 100
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

fixable = ["ALL"]

ignore = [
    "B008",
    "UP035",
    "SIM105",
    "SIM118",
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
"./migrations/versions/*.py" = [
    "UP035",
    "UP007",
    "I001"
]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
